try to fix spacing of volunteering encart on homepage

--- a/wp-content/themes/clinicoeurs/resources/sass/homepage/_volunteering.scss
+++ b/wp-content/themes/clinicoeurs/resources/sass/homepage/_volunteering.scss
@@ -3,7 +3,8 @@
 .home {
   .volunteering__bg {
     @include mq(tablet){
-    margin-block: 9rem;
+    margin-block-start: 7.5rem;
+    margin-block-end: 7.5rem;
   }
     margin-block: 5rem;
     width: 100vw;
